--- a/src/app/work-experience/work-experience.component.css
+++ b/src/app/work-experience/work-experience.component.css
@@ -49,3 +49,13 @@ ul li h4 {
   z-index: 1;
   background-color: var(--gray-light);
 }
+
+section p {
+  font-size: 1.2rem;
+  text-align: justify;
+  margin-top: 8px;
+}
+
+section{
+  margin-top: 6px;
+}
