--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -21,7 +21,7 @@
 
   <div class="profile">
     <div class="profile-bg"></div>
-    <img src="assets/profile.png
+    <img src="assets/New_Image.png
     " alt="" />
   </div>
 </div>
