--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Work Experience</h1>
-  <ul>
+  <ul style="margin-top: 10px;">
     <li *ngFor="let workexp of workExpList">
       <h2>{{ workexp.role }}</h2>
       <h3>{{ workexp.company }}</h3>
